Se implementó el historial de pagos por pedido
